# pytorch-tutorials

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
requirements/: base-requirements.in  base-requirements.txt  dev-requirements.in  dev-requirements.txt
src/ad_pytorch_tutorials/data_studies/: custom_linear_regression_class.ipynb  custom_linear_regression_model.ipynb  linear_class_from_pytorch_regression_model.ipynb  multiple_dimensional_tensors.ipynb  one_dimensional_tensors.ipynb
