[metadata]
name = spikyai_awesome_project
version = 0.0.1
author = Spiky Ai
author_email = info@spiky.com
description = An awesome project made by Spiky.ai
url = https://github.com/spikydev/python-boilerplate
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

install_requires =

[options.packages.find]
where = src
