[metadata]
name = pytorch-tutorials
version = 0.0.1
author = Anil Demir
author_email = anilsdemir@gmail.com
description = Pytorch tutorials for self-development
url = https://github.com/anilsdemir/pytorch-tutorials
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

install_requires =

[options.packages.find]
where = src
